Fix for icon path. Update to work with mobile to remove horizontal scroll

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -166,8 +166,9 @@ p {
     font-weight: 200;
 }
 
-.service-wrapper .glyphicon {
-    font-size: xx-large;
+.service-wrapper .service-icon {
+    height: 40px;
+    opacity: .8;
 }
 
 .service-text {
